<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/general_margin"
    >

    <TextView
        android:id="@+id/product_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_info"
        android:textSize="@dimen/general_textsize" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/price_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price_hint"
        android:inputType="number" />

    <EditText
        android:id="@+id/quantity_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity_hint"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dec_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sell_1" />

        <Button
            android:id="@+id/inc_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buy_1" />
    </LinearLayout>

    <TextView
        android:id="@+id/supp_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/general_margin"
        android:text="@string/supp_info"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/supp_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/supp_name_hint"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/supp_phone_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/supp_phone_hint"
            android:inputType="phone|number" />

        <Button
            android:id="@+id/call_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_supplier_button" />

    </LinearLayout>

</LinearLayout>
</ScrollView>