<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_dimen"
    android:descendantFocusability="blocksDescendants">


    <TextView
        android:id="@+id/quantity"
        android:layout_width="@dimen/button_margin"
        android:layout_height="@dimen/list_dimen"
        android:padding="@dimen/general_margin"
        android:textSize="@dimen/large_textsize"
        tools:text="Q" />

    <TextView
        android:id="@+id/qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        app:layout_constraintBottom_toBottomOf="@+id/quantity"
        app:layout_constraintStart_toStartOf="@+id/quantity"
        android:text="@string/quantity" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mid_margin"
        android:layout_marginLeft="@dimen/mid_margin"
        android:layout_marginStart="@dimen/mid_margin"
        android:layout_marginTop="@dimen/mid_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quantity"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="name"
            android:textSize="@dimen/mid_textsize" />

        <LinearLayout
            android:id="@+id/price_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency"
                android:textSize="@dimen/mid_textsize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:textSize="@dimen/general_textsize"
                tools:text="price" />

        </LinearLayout>


    </LinearLayout>


    <Button
        android:id="@+id/sale_button"
        android:layout_width="@dimen/button_margin"
        android:layout_height="@dimen/button_margin"
        android:layout_marginBottom="@dimen/mid_margin"
        android:layout_marginTop="@dimen/mid_margin"
        android:text="@string/sale_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_constraintVertical_bias="0.5" />

    <android.support.constraint.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</android.support.constraint.ConstraintLayout>